refactor: Изменена логика формирования стейта экрана новостей и логика его отображения, создание NewsViewModel вынесено в фабрику для более корректной работы.
UI changes:
* При первоначальной загрузке (пустая БД) теперь появляется надпись "Загрузка…"
* Теперь приложение корректно переживает пересоздание Activity

--- a/news/src/main/res/values/strings.xml
+++ b/news/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="news__error_text">Произошла ошибка: %1$s</string>
+    <string name="news__is_loading_text">Загрузка…</string>
     <string name="news__retry_text">Попробовать еще раз</string>
 </resources>
